--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "chalk": "5.0.1",
     "express": "4.18.1",
-    "morgan": "1.10.0"
+    "morgan": "1.10.0",
+    "node": "^19.8.1"
   },
   "devDependencies": {
     "nodemon": "2.0.19"
